# h3

./: .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  DEPLOY.md  H3-PRD-Spec-Summary.html  Makefile  Muster-PRD-Spec-Summary.html  MusterFlow-PRD.html  Project-Hivemind-PRD.html  README.md  TotalStack-PRD.html  go.mod  h3-prd-client.html  h3-prd.html  prd-spec-summary.html  prd.html  pyproject.toml  rabbit-hole-prd.html  status-report.html  tasks.md
.coding-hermes/: tasks.md
.github/workflows/: pages.yml  roundtrip.yml
.gitreins/: config.yaml  tasks.yaml
.vfs/: manifest.yaml
.vfs/graph/: edges.jsonl
docs/: guide.html  index.html  migration.html  protocol.html  sdk.html
integration/roundtrip/: .gitignore  generate_fixtures.py  go.mod  roundtrip.sh  (+2 more)
specs/: 01-Overview-Architecture.md  02-Protocol-Specification.md  03-Installer-Version-Compat.md  04-SDK-Libraries.md  05-Test-Battery.md  06-Hermes-Core-Integration.md  07-OpenAPI-JSON-Schema.md  08-Cross-Repo-Release-Pipeline.md  09-Testing-Framework-Architecture.md  10-Website-Docs.md  11-Hermes-Upgrade-Survival.md  12-Security-Authentication.md  13-Token-Rotation-Revocation.md  14-TLS-Enforcement.md  15-Rate-Limiting.md  16-Observability-Structured-Logging.md  17-Metrics-Performance-Monitoring.md  18-Distributed-Tracing.md  19-Health-Check-v2.md  20-Dashboard-Alerting.md  20-Operational-Dashboard.md  21-Resilience-Fallback.md  22-Performance-Architecture.md  23-Multi-Tenancy-Architecture.md  24-Compatibility-Matrix.md  25-Conformance-Certification.md  26-Chaos-Engineering.md  _index.md
(+58 files in other folders)
